force-app/main/default/objects/Invoice_Product__c/Invoice_Product__c.object-meta.xml
<CustomObject>
    <description>This is object of Invoice Product details</description>
    <label>Invoice Product</label>
    <nameField>
        <displayFormat>PRO-{0000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>